# Sectoral-Correlation-Networks-of-the-Philippine-Stock-Market

./: LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
Correlations_Distance_matrices_engine/: correlation_distance_matrix_engine.py  data_loader.py
data/: Financials_data.csv  Holding_Firms_data.csv  Industrial_data.csv  Mining_and_Oil_data.csv  Property_data.csv  Services_data.csv
notebook/: GraphTheory.ipynb  computations.ipynb
study/: Draft of Exposition Paper.tex  Graph_Theory_data_gathering - FINAL.xlsx  reference.bib
